[gd_scene load_steps=5 format=3 uid="uid://dru316jqflpmo"]

[ext_resource type="Script" path="res://13_TOOLS_UI/Choose_orbe_type/Orbe_typeIcon_select.gd" id="1_45khf"]
[ext_resource type="Resource" uid="uid://ck5e4tpntmloe" path="res://08_SUBSCENES/Orbe/Orbe_datas/Orbe_exitMirror.tres" id="2_7575g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5fyng"]
bg_color = Color(0.0666667, 0.247059, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j11fe"]
bg_color = Color(0.721569, 0.580392, 0.407843, 1)

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(100, 100)
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_45khf")
orbe_data_type = ExtResource("2_7575g")

[node name="select_off" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5fyng")

[node name="select_on" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j11fe")

[node name="orbe_type" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.954
anchor_bottom = 1.0
offset_right = 2.3
text = "Orbe_type"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="orbe_number" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -23.0
offset_right = -3.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
horizontal_alignment = 2
